# TicTacToe

./: CMakeLists.txt  README.md  Пояснительная_записка.odt
src/: Config.h  Game.cpp  Game.h  main.cpp
src/Game/: Game.cpp  Game.h  Lookup.cpp  Lookup.h
src/Gui/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  Control.h  Gui.cpp  Gui.h  Label.cpp  Label.h
src/Utils/: Assets.cpp  Assets.h
